# sentiment_analysis_model_development_bert

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: default.yml  freeze_base.yml  full_finetune.yml
sentiment_model/: data.py  evaluation.py  model.py  training.py
