[project]
name = "sentiment-analysis-model-development-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "google-cloud-storage>=2.0.0",
    "mlflow[gcs]>=2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "protobuf>=3.20.0,<4.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]
